src/objects/Guest_Card__c.object
<CustomObject>
    <fields>
        <fullName>inactivate__c</fullName>
        <formula>if(!ISPICKVAL(Inactive_Reason__c , &quot;&quot;), 
if(Inactivated_in_MRI__c, 
&quot;false&quot;, 
&quot;true&quot;), 
&quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>inactivate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isAVBLead__c</fullName>
        <formula>if( ispickval(How_did_you_hear_about_us__c, &quot;AVB Company Website&quot;), &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isAVBLead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isEmailLead__c</fullName>
        <formula>if( ISPICKVAL( Initial_Lead_Type__c , &quot;Email&quot;), &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isEmailLead</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isValidGuestCard__c</fullName>
        <formula>if(and( hasAccount__c = &quot;true&quot;, hasContact__c = &quot;true&quot;, or(isEmailLead__c = &quot;false&quot;, and(isEmailLead__c = &quot;true&quot;, or( isAVBLead__c = &quot;true&quot;, hasVisitDate__c = &quot;true&quot;)))), &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isValidGuestCard</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isValidUser__c</fullName>
        <formula>if(or( Prospect_Account__r.LastModifiedBy.FirstName + &quot; &quot; + Prospect_Account__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;, Contact__r.LastModifiedBy.FirstName + &quot; &quot; + Contact__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;, LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName != &quot;Integration Data Process&quot;), &quot;true&quot;, &quot;false&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>isValidUser</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>leasingAssociate__c</fullName>
        <formula>MRI_Leasing_Associate__r.LeasingAssociateID__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>leasingAssociate</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>searchPhone__c</fullName>
        <label>Any Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>updateBy__c</fullName>
        <formula>if(LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName != &quot;Integration Data Process&quot;, 
LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName, 
if(Contact__r.LastModifiedBy.FirstName + &quot; &quot; + Contact__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;, Contact__r.LastModifiedBy.FirstName + &quot; &quot; + Contact__r.LastModifiedBy.LastName + &quot; :C&quot;, 
Prospect_Account__r.LastModifiedBy.FirstName + &quot; &quot; + Prospect_Account__r.LastModifiedBy.LastName + if(Prospect_Account__r.LastModifiedBy.FirstName + &quot; &quot; + Prospect_Account__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;,&quot; :A&quot;, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>updateBy</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>updatedBy__c</fullName>
        <formula>if(LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName != &quot;Integration Data Process&quot;, 
    LastModifiedBy.FirstName + &quot; &quot; + LastModifiedBy.LastName, 
if(Contact__r.LastModifiedBy.FirstName + &quot; &quot; + Contact__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;,            Contact__r.LastModifiedBy.FirstName + &quot; &quot; + Contact__r.LastModifiedBy.LastName + &quot; :C&quot;,  
Prospect_Account__r.LastModifiedBy.FirstName + &quot; &quot; + Prospect_Account__r.LastModifiedBy.LastName + if(Prospect_Account__r.LastModifiedBy.FirstName + &quot; &quot; + Prospect_Account__r.LastModifiedBy.LastName != &quot;Integration Data Process&quot;,&quot; :A&quot;, &quot;&quot;)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>updatedBy</label>
        <type>Text</type>
    </fields>
    <label>Guest Card</label>
    <listViews>
        <fullName>Affordable_Guest_Cards</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>AVB_Associate__c</columns>
        <columns>When_will_you_be_moving_in__c</columns>
        <columns>Class_ID__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>How_did_you_hear_about_us__c</field>
            <operation>startsWith</operation>
            <value>Affordable</value>
        </filters>
        <label>Affordable Guest Cards</label>
    </listViews>
    <listViews>
        <fullName>All_Waitlist</fullName>
        <columns>CREATED_DATE</columns>
        <columns>NAME</columns>
        <columns>AVB_Associate__c</columns>
        <columns>When_will_you_be_moving_in__c</columns>
        <columns>Class_ID__c</columns>
        <columns>How_Many_Occupants__c</columns>
        <columns>Community__c</columns>
        <columns>Price_Range_Desired__c</columns>
        <columns>Lease_term_desired__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Wait List</value>
        </filters>
        <label>All Waitlist</label>
    </listViews>
    <listViews>
        <fullName>CCC_Web_Leads</fullName>
        <columns>NAME</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>LAST_ACTIVITY</columns>
        <columns>Community__c</columns>
        <columns>Guest_Card_Details__c</columns>
        <columns>Home_Phone__c</columns>
        <columns>Cell_Phone__c</columns>
        <columns>Bath__c</columns>
        <columns>Bed__c</columns>
        <columns>Price_Range_Desired__c</columns>
        <columns>Email__c</columns>
        <columns>Lease_term_desired__c</columns>
        <columns>When_will_you_be_moving_in__c</columns>
        <columns>AVB_Associate__c</columns>
        <filterScope>Queue</filterScope>
        <label>CCC Web Leads</label>
        <queue>CCC_Web_Leads</queue>
    </listViews>
    <listViews>
        <fullName>Email_Guest_Cards_Yesterday_Today</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Initial_Lead_Type__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>AVB_Associate__c</columns>
        <columns>When_will_you_be_moving_in__c</columns>
        <columns>Level_One_Appointment_Created__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>Email__c</columns>
        <columns>Rating__c</columns>
        <columns>Bed__c</columns>
        <columns>Stale__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY,YESTERDAY</value>
        </filters>
        <filters>
            <field>Initial_Lead_Type__c</field>
            <operation>equals</operation>
            <value>Email</value>
        </filters>
        <label>Email Guest Cards Yesterday &amp; Today</label>
    </listViews>
    <listViews>
        <fullName>Guest_cards_created_AVB_calendar_week</fullName>
        <columns>NAME</columns>
        <columns>AVB_Associate__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Community__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>Guest cards created AVB calendar week</label>
    </listViews>
    <listViews>
        <fullName>Level_One_Guest_cards_over_5_days_old</fullName>
        <booleanFilter>(1 or 2) and 3 and 4 and 5</booleanFilter>
        <columns>Community__c</columns>
        <columns>NAME</columns>
        <columns>AVB_Associate__c</columns>
        <columns>AgeInDays__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>AVB_Associate__c</field>
            <operation>equals</operation>
            <value>Level One</value>
        </filters>
        <filters>
            <field>AVB_Associate__c</field>
            <operation>equals</operation>
            <value>Not Yet Assigned</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessOrEqual</operation>
            <value>LAST_N_DAYS:5</value>
        </filters>
        <filters>
            <field>Initial_Lead_Type__c</field>
            <operation>notEqual</operation>
            <value>Email</value>
        </filters>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Active</value>
        </filters>
        <label>Active unassinged leads over 5 days</label>
    </listViews>
    <listViews>
        <fullName>Today_s_guest_cards</fullName>
        <columns>NAME</columns>
        <columns>Community__c</columns>
        <columns>Level_One_Appointment_Created__c</columns>
        <columns>AVB_Associate__c</columns>
        <columns>When_will_you_be_moving_in__c</columns>
        <columns>Rating__c</columns>
        <columns>Initial_Lead_Type__c</columns>
        <columns>Bed__c</columns>
        <columns>Email__c</columns>
        <columns>How_did_you_hear_about_us__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>Stale__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CREATED_DATE</field>
            <operation>equals</operation>
            <value>TODAY</value>
        </filters>
        <label>Today&apos;s guest cards</label>
    </listViews>
    <listViews>
        <fullName>ccc_wl</fullName>
        <columns>NAME</columns>
        <filterScope>Queue</filterScope>
        <filters>
            <field>OWNER.ALIAS</field>
            <operation>equals</operation>
            <value>CCC Web Leads</value>
        </filters>
        <label>ccc wl</label>
        <queue>CCC_Web_Leads</queue>
    </listViews>
    <nameField>
        <label>Guest Card Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Guest Cards</pluralLabel>
    <sharingModel>Private</sharingModel>
    <sharingReasons>
        <fullName>Community__c</fullName>
        <label>Role</label>
    </sharingReasons>
    <sharingReasons>
        <fullName>POD__c</fullName>
        <label>POD</label>
    </sharingReasons>
    <validationRules>
        <fullName>Initial_Visit_Date</fullName>
        <active>false</active>
        <description>Initial Visit Date must be within last 3 days</description>
        <errorConditionFormula>If  (ISNEW() , 

Initial_Visit_Date__c &lt; Now()-3 ,

Initial_Visit_Date__c &lt; CreatedDate -3)</errorConditionFormula>
        <errorMessage>Initial visit date must be within the last 3 days of the Created Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_changing_status_to_Leased</fullName>
        <active>true</active>
        <description>Guest Card status can only be changed to &quot;Leased&quot; through MRI.</description>
        <errorConditionFormula>AND(
  ($Profile.Name != &quot;System Administrator&quot;),
  ($Profile.Name != &quot;Integration Administrator&quot;),
  ISCHANGED( Status__c ),
  ISPICKVAL( Status__c, &quot;Leased&quot;)
  )</errorConditionFormula>
        <errorMessage>Guest Card status can only be changed to &quot;Leased&quot; through MRI.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Limit_use_of_Auto_Inactivated</fullName>
        <active>true</active>
        <errorConditionFormula>AND(($Profile.Name != &quot;System Administrator&quot;), 
        ($Profile.Name != &quot;Integration Administrator&quot;), 
	(ISPICKVAL( Inactive_Reason__c , &apos;Auto Inactivated&apos;)),
	NOT(
		(ISPICKVAL(Initial_Lead_Type__c, &apos;Email&apos;))
		&amp;&amp; ((TODAY() -  When_will_you_be_moving_in__c) &gt;= 30)
		)
	)</errorConditionFormula>
        <errorDisplayField>Inactive_Reason__c</errorDisplayField>
        <errorMessage>Auto Inactivated cannot be chosen manually.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_AVB_Associate</fullName>
        <active>true</active>
        <errorConditionFormula>ISBLANK( AVB_Associate__c )</errorConditionFormula>
        <errorDisplayField>AVB_Associate__c</errorDisplayField>
        <errorMessage>Please enter the name of the assigned AVB Associate.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Do_you_have_a_pet_with_pet_type</fullName>
        <active>false</active>
        <description>If someone fills out the pet type and breed field they must also have a value in the Do you have a pet other than a service animal field.</description>
        <errorConditionFormula>OR(ISBLANK(TEXT(Have_a_pet_other_than_a_service_animal__c )) &amp;&amp; NOT(ISBLANK( Pet_Type_Breed__c )), NOT(ISBLANK(TEXT(Have_a_pet_other_than_a_service_animal__c ))) &amp;&amp;  ISBLANK( Pet_Type_Breed__c ))</errorConditionFormula>
        <errorMessage>The &apos;Have a pet other than a service animal&apos; and the &apos;Pet Type Breed&apos; fields must both be populated.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Require_Inactive_Reason</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
  ISPICKVAL(Status__c , &apos;Inactive&apos;),
  ISBLANK( TEXT( Inactive_Reason__c) )
  )</errorConditionFormula>
        <errorDisplayField>Inactive_Reason__c</errorDisplayField>
        <errorMessage>Please select an Inactive Reason.</errorMessage>
    </validationRules>
</CustomObject>